Update to JDA22